titulo comentado, si no se genera otra portada interna

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 ---
-title: La CNT en la Transición
+#title: La CNT en la Transición
 author: Rafa Gómez López
 copyright: 2021 Rafa Gómez López
 rights: © 2019 Rafa Gómez López, CC BY-SA
