--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,11 +1,11 @@
 ---
 #title: La CNT en la Transición
-author: Rafa Gómez López
-copyright: 2021 Rafa Gómez López
-rights: © 2019 Rafa Gómez López, CC BY-SA
+author: Joaquín Beltrán Dengra
+copyright: 2022 Joaquín Beltrán Dengra
+rights: © 2022 Joaquín Beltrán Dengra, CC BY-SA
 
-babel-lang: catalan
-lang: ca-ES
+babel-lang: spanish
+lang: es-ES
 
 documentclass: article
 #classoption: twoside
@@ -18,7 +18,7 @@ numbersections: true
 geometry:
 # Documented: http://ctan.math.utah.edu/ctan/tex-archive/macros/latex/contrib/geometry/geometry.pdf
 #- showframe # show geometry lines
-#- showcrop # cutting marks when layout is different than paper
+#- showcrop # cutting marks when layout is different than paper #sangrías
 - twoside #doblecara
 - margin=12mm # margen para todo
 - footskip=1.7em 
